Sum cool stuffs

--- a/src/globals.css
+++ b/src/globals.css
@@ -21,6 +21,7 @@ body {
 
   background-repeat: no-repeat !important;
   background-size: 100vw 100vh !important;
+  background-attachment: fixed !important;
 }
 
 code {
